--- a/html/git.html
+++ b/html/git.html
@@ -14,19 +14,19 @@
       <div class="card">
          <p class="subtitle">Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>git add <файл> — выбирает конкретный файл для включения в будущий коммит, добавляет его в индекс.</li>
+            <li>git commit -m «Описание изменений» — формирует новый коммит с комментарием, описывающим суть внесённых правок </li>
+            <li>git branch — отображает перечень всех локальных веток проекта. git branch <название> — создаёт новую ветку, оставаясь при этом в текущей. </li>
+            <li>git checkout <ветка> — осуществляет переход на указанную ветку. git checkout -b <ветка> — создаёт новую ветку и сразу же переключается на неё.</li>
+            <li>git merge <ветка> — объединяет выбранную ветку с текущей, добавляя её изменения.</li>
          </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center">
-            <a href="mac.html">Вернуся на главную</a>
+            <a href="../index.html">Вернуться на главную</a>
          </p>
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
